[package]
name = "argus"
version = "0.2.0"
authors = ["cmj <cmj@cmj.tw>"]
edition = "2018"
description = "The multi-layer store"
keywords = ["argus", "store", "multi-layer"]
repository = "https://github.com/cmj0121/argus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
itertools = "0.10.1"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.3"
stderrlog = "0.5.1"
structopt = "0.3.22"
